2015-02-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.0.0 released
        ========================

        Add optional PHASE information to CTA event lists
        Use URL path informtion in GVOClient connection to Hub
        Ignore empty string parameters in GModel::is_valid()
        Add some constructors
        Add classname methods to Python interface (#1321)
        Rename CTA cube analysis classes (#1269)
        Do not dump unqueried parameters (#1349)
        Add GBilinear class
        Add WCS projections (MOL)
        Add GXmlElement::has_attribute() method
        Add GSkymap scaling operators (#1296)
        Implement GApplicationPar range checking (#285)
        Forbid appending to text, comment and PI XML nodes (#804)
        Increase precision for diffuse model Npred computation (#1248)
        Implement observation definition reader/writer (#1429)


2015-01-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Bug fix version 0.9.1 released
        ================================

        Fixed bug #1383 (unit test error with recent gcc compiler)


2014-11-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.9.0 released
        ========================

        Add energy dispersion to CTA module
        Add pointing table support to CTA module
        Add event filtering for binned analysis
        Add +=, -=, *= and /= operators to GSkymap
        Add integration status tracking to GIntegral
        Add GCTAExposure and GCTAMeanPsf classes
        Add ts and tscalc attributes to GModel and use them in models
        Add manipulation methods to GCTAResponseTable
        Add read(), write() and save() methods to GCTAPsf2D and GCTAPsfKing
        Add classname() method to all classes
        Add utc() methods to GTime class
        Add hierachical element access methods to GXml and GXmlNode
        Add table creation and saving methods to GCsv class